components/victoria-logs/configs/home/service-victorialogs.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: victoria-logs-single-server-http
  namespace: victoria-logs
spec:
  type: ClusterIP
  selector:
    app: server
    app.kubernetes.io/instance: victoria-logs-single
    app.kubernetes.io/name: victoria-logs-single
  ports:
    - name: http
      port: 9428
      targetPort: http
      protocol: TCP
