components/victoria-logs/configs/home/ingress-victorialogs.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: victorialogs
  namespace: victoria-logs
  annotations:
    tailscale.com/proxy-group: private-ingress
    tailscale.com/tags: tag:k8s-private
    tailscale.com/http-redirect: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "VictoriaLogs"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "victoriametrics.png"
    gethomepage.dev/href: "https://victorialogs.tail0c49c.ts.net"

spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - victorialogs
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: victoria-logs-single-server-http
                port:
                  name: http
